force-app/main/default/objects/SLA_Metrics__c/SLA_Metrics__c.object-meta.xml
<CustomObject>
    <description
  >Daily rollup of IT Request SLA metrics for reporting and dashboards</description>
    <label>SLA Metrics</label>
    <nameField>
        <displayFormat>SLA-{00000}</displayFormat>
        <label>SLA Metric Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Metrics</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>