force-app/main/default/objects/SLA_Metrics__c/fields/Avg_Resolution_Hours__c.field-meta.xml
<CustomField>
    <fullName>Avg_Resolution_Hours__c</fullName>
    <description
  >Average time to resolution in hours for this tier on this date</description>
    <label>Avg Resolution (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>