force-app/main/default/objects/SLA_Metrics__c/fields/Breach_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Breach_Percentage__c</fullName>
    <description>Percentage of requests that breached SLA</description>
    <formula
  >IF(Total_Requests__c &gt; 0, Breached_Count__c / Total_Requests__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Breach Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>