force-app/main/default/objects/SLA_Metrics__c/fields/Breached_Count__c.field-meta.xml
<CustomField>
    <fullName>Breached_Count__c</fullName>
    <description
  >Number of requests that were resolved after breaching (Missed)</description>
    <label>Breached Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>