force-app/main/default/objects/SLA_Metrics__c/fields/Met_Count__c.field-meta.xml
<CustomField>
    <fullName>Met_Count__c</fullName>
    <description>Number of requests resolved within SLA (Met)</description>
    <label>Met Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>