force-app/main/default/objects/SLA_Metrics__c/fields/Metric_Date__c.field-meta.xml
<CustomField>
    <fullName>Metric_Date__c</fullName>
    <description
  >Date for which metrics are calculated (typically yesterday)</description>
    <label>Metric Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>