force-app/main/default/objects/SLA_Metrics__c/fields/Missed_Count__c.field-meta.xml
<CustomField>
    <fullName>Missed_Count__c</fullName>
    <description
  >Number of requests with SLA Status = Missed (same as Breached Count for resolved requests)</description>
    <label>Missed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>