force-app/main/default/objects/SLA_Metrics__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>Support tier (Tier 1, Tier 2, Tier 3)</description>
    <externalId>true</externalId>
    <label>Tier</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>