force-app/main/default/objects/SLA_Metrics__c/fields/Total_Requests__c.field-meta.xml
<CustomField>
    <fullName>Total_Requests__c</fullName>
    <description
  >Total number of resolved requests for this tier on this date</description>
    <label>Total Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>