force-app/main/default/objects/SLA_Metrics__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description
  >Composite unique key for upsert operations: Metric_Date + Tier</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>